# bessie

./: LICENSE  README.md  cipher.txt  design.md  test.py
.github/workflows/: tests.yml
python/: bessie.py  test_bessie.py
rust/: Cargo.toml
rust/lib/: Cargo.toml
rust/lib/benches/: bench.rs
rust/lib/src/: lib.rs  test.rs
rust/lib/tests/: compare_python.rs
rust/src/: lib.rs
