[package]
name = "bessie"
version = "0.0.1"
edition = "2021"
description = "an authenticated, chunked cipher based on BLAKE3"
readme = "../../README.md"
repository = "https://github.com/oconnor663/bessie"
license = "CC0-1.0 OR Apache-2.0"

[dependencies]
blake3 = "1"
rand = "0.8"

[dev-dependencies]
page_size = "0.4"
