[package]
name = "bessie"
version = "0.0.3"
description = "an authenticated, chunked cipher based on BLAKE3"
authors = ["Jack O'Connor <oconnor663@gmail.com>"]
license = "CC0-1.0 OR Apache-2.0"
readme = "../../README.md"
repository = "https://github.com/oconnor663/bessie"
documentation = "https://docs.rs/bessie"

edition = "2021"

[dependencies]
blake3 = "1"
rand = "0.8"

[dev-dependencies]
duct = "0.13.6"
hex = "0.4.3"
page_size = "0.6"
